# Poly94

./: .gitignore  .gitlab-ci.yml  .gitmodules  GenPoly94Cpu.scala  MEMORY_MAP.md  Makefile  Makefile.coco  README.md  poly94.ys  test_my_design.py
boot/: .gitignore  CMakeLists.txt  Makefile  boot.c  boot.ld  boot.py  sdram.ld  start.s  start_sdram.s  test_framebuffer.c  toolchain.cmake
boot/dhrystone/: dhrystone.h
doc/: bootloader.rst  build-environment.rst  code-style.rst  conf.py  critical-paths.rst  index.rst  roadmap.rst  sdram-bandwidth.md  sdram-controller.rst  sdram-model.md  video-controller.rst
doc/patterns/: README.md  ready-valid-2-master-1cyc.json
firmware/: CMakeLists.txt  README.md  boot.c  boot.ld  sdram.ld  start.s  start_sdram.s  stdio.c  test_framebuffer.c  toolchain.cmake
firmware/demos/hello_world/: main.c
firmware/demos/memory_latency/: MemoryLatency.c  README.md  plot.py  (+1 more)
firmware/dhrystone/: dhrystone.h  dhrystone_main.c
firmware/prebuilt/: test_dhrystone.objdump.txt
rtl/: CONVENTIONS.md  CPU_Rom.sv  Interrupt_Ctrl.sv  Memory_Ctrl.sv  README.md  RGB_Color_Bars_Generator.v  Sdram_Arbiter.sv  Text_Generator.v  VGA_Timing.sv  VGA_Timing_Generator.sv  VGA_Timing_Generator.v  Video_Ctrl.sv  cheby.mk  hdmi_video.v  interrupts.sv  memory_map.sv  sys.cheby  top.cheby  top.sv  top.v  top_ulx3s.v  top_vgatest.vhd  uart.cheby  video.cheby
rtl/ip/: VexRiscv.v  sdram_pnru.v  uart.sv
rtl/model/: mt48lc16m16a2.v
rtl/sim/: top_sim.sv
sdk/: README.md
sdk/include/: Poly94_hw.h  sys.h  top.h  uart.h  video.h
sim/: poly94.vlt  sim_main.cpp  write_ppm.hpp
test_expected/: test_framebuffer.ppm
tools/: sdram_clk_phase.py
tools/ci/: build_stats.html  present_build_stats.py  save_build_stats.py
